--- a/index.html
+++ b/index.html
@@ -1,96 +1,26 @@
+﻿---
+layout: master_default
+description: A description about my blog homepage
+---
 
-<!doctype html>
-<html lang="en" dir="ltr">
-<head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Web Prototypes / Karma Rescue</title>
-	<style type="text/css">
-		html, body, #outer-outer-container, #outer-container {
-			height: 100%;
-			min-height: 100%;
-		}
-		body {
-			font: 125%/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-			margin: 0;
-			background: rgb(244, 245, 244);
-			color: rgb(0, 1, 0); /* @text-color */
-		}
-		a {
-			color: rgb(110, 160, 26); /* @link-color */
-			text-decoration: none;
-		}
-		a:hover,
-		a:active,
-		a:focus {
-			text-decoration: underline;
-		}
-		a:visited {
-			color: #333;
-		}
-		h1 {
-			margin-top: 0;
-			margin-bottom: 1em;
-		}
-		h2 {
-			margin-bottom: 0;
-			font-weight: normal;
-		}
-		h2 strong {
-			font-weight: bold;
-		}
-		h2 + p {
-			margin-top: 0;
-			max-width: 25em;
-		}
-		#container {
-			margin: 50px auto;
-		}
-		#outer-outer-container {
-			margin: 0 auto;
-			display: table;
-			padding: 2em;
-		}
-		#outer-container {
-			display: table-cell;
-			vertical-align: middle;
-			margin: 0 auto;
-		}
-		#container > section > section {
-			float: left;
-			margin-right: 3em;
-		}
-	</style>
-</head>
-<body>
-	<div id="outer-outer-container">
-		<div id="outer-container">
-			<div id="container">
+<header>
+    <h1>Karma Rescue</h1>
+</header>
 
-				<header>
-					<h1>Karma Rescue</h1>
-				</header>
-
-				<section>
-					<section>
-						<a href="donate/">
-							<h2>Donate</h2>
-						</a>
-					</section>
-					<section>
-						<a href="volunteer/">
-							<h2>Volunteer</h2>
-						</a>
-					</section>
-					<section>
-						<a href="about/">
-							<h2>About</h2>
-						</a>
-					</section>
-				</section>
-
-			</div>
-		</div>
-	</div>
-</body>
-</html>
+<section>
+    <section>
+        <a href="donate/">
+            <h2>Donate</h2>
+        </a>
+    </section>
+    <section>
+        <a href="volunteer/">
+            <h2>Volunteer</h2>
+        </a>
+    </section>
+    <section>
+        <a href="about/">
+            <h2>About</h2>
+        </a>
+    </section>
+</section>
