Add a few example pages

--- a/html/about/index.html
+++ b/html/about/index.html
@@ -3,10 +3,10 @@
 <html lang="en" dir="ltr">
 <head>
 	<meta charset="utf-8" />
-	<title>Volunteer</title>
+	<title>What We Do</title>
 	<link type="text/css" rel="stylesheet" href="/css/shared.css" />
 </head>
 <body>
-	<h1>Volunteer</h1>
+	<h1>What We Do</h1>
 </body>
 </html>
