--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
 
 				<section>
 					<section>
-						<a href="donate/">
+						<a href="/html/donate/">
 							<h2>Donate</h2>
 						</a>
 					</section>
 					<section>
-						<a href="volunteer/">
+						<a href="/html/volunteer/">
 							<h2>Volunteer</h2>
 						</a>
 					</section>
 					<section>
-						<a href="about/">
+						<a href="/html/about/">
 							<h2>About</h2>
 						</a>
 					</section>
