--- a/html/donate/index.html
+++ b/html/donate/index.html
@@ -3,10 +3,10 @@
 <html lang="en" dir="ltr">
 <head>
 	<meta charset="utf-8" />
-	<title>Volunteer</title>
+	<title>Donate</title>
 	<link type="text/css" rel="stylesheet" href="/css/shared.css" />
 </head>
 <body>
-	<h1>Volunteer</h1>
+	<h1>Donate</h1>
 </body>
 </html>
