Add a “Meet a Pet” page

--- a/adopt/details.html
+++ b/adopt/details.html
@@ -30,7 +30,7 @@
 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 	<ul>
-		<li><a href="">Meet me!</a></li>
+		<li><a href="meet.html">Meet me!</a></li>
 		<li><a href="">Adopt me!</a></li>
 		<li><a href="">Sponsor me!</a></li>
 	</ul>
