Initial test ZD

--- a/adopt/index.html
+++ b/adopt/index.html
@@ -36,7 +36,7 @@
 				<li><label><input type="radio" name="notifications" />Female</label></li>
 			</ul>
 		</section>
-		<p><button>Go</button></p>
+		<p><button>Go-></button></p>
 	</form>
 
 </body>
