Configure base master layout, landing page layout

--- a/donate/index.html
+++ b/donate/index.html
@@ -1,12 +1,11 @@
+---
+layout: landing
+description: Donate to Karma Rescue
+title: Donate
+---
 
-<!doctype html>
-<html lang="en" dir="ltr">
-<head>
-	<meta charset="utf-8" />
-	<title>Donate</title>
-	<link type="text/css" rel="stylesheet" href="/css/shared.css" />
-</head>
-<body>
-	<h1>Donate</h1>
-</body>
-</html>
+<div class="row">
+	<div class="col-lg-12">
+		This is the donate page
+	</div>
+</div>
