--- a/index.html
+++ b/index.html
@@ -1,26 +1,10 @@
 ---
-layout: master_default
-description: A description about my blog homepage
+layout: landing
+description: Karma Rescue home page
 ---
 
-<header>
-    <h1>Karma Rescue</h1>
-</header>
-
-<section>
-    <section>
-        <a href="donate/">
-            <h2>Donate</h2>
-        </a>
-    </section>
-    <section>
-        <a href="volunteer/">
-            <h2>Volunteer</h2>
-        </a>
-    </section>
-    <section>
-        <a href="about/">
-            <h2>About</h2>
-        </a>
-    </section>
-</section>
+<div class="row">
+	<div class="col-lg-12">
+		Here's some Index Content
+	</div>
+</div>
