--- a/volunteer/index.html
+++ b/volunteer/index.html
@@ -1,12 +1,11 @@
+---
+layout: landing
+description: Volunteer for Karma Rescue
+title: Volunteer
+---
 
-<!doctype html>
-<html lang="en" dir="ltr">
-<head>
-	<meta charset="utf-8" />
-	<title>Volunteer</title>
-	<link type="text/css" rel="stylesheet" href="/css/shared.css" />
-</head>
-<body>
-	<h1>Volunteer</h1>
-</body>
-</html>
+<div class="row">
+	<div class="col-lg-12">
+		This is the volunteer page
+	</div>
+</div>
