Add placeholder pages

--- a/adopt/index.html
+++ b/adopt/index.html
@@ -11,31 +11,104 @@
 	<h2>What kind of dog are you looking for?</h2>
 
 	<form action="results" method="get">
-		<p>
-			<label>
-				<span>Breed</span>
-				<input type="text" />
-			</label>
-		</p>
-		<p>
-			<label>
-				<span>Size</span>
-				<input type="text" />
-			</label>
-		</p>
-		<p>
-			<label>
-				<span>Age</span>
-				<input type="text" />
-			</label>
-		</p>
-		<section>
-			<h6>Gender</h6>
+		<fieldset>
+			<legend>Good With</legend>
 			<ul>
-				<li><label><input type="radio" name="notifications" />Male</label></li>
-				<li><label><input type="radio" name="notifications" />Female</label></li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Kids</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Cats</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Dogs</span>
+					</label>
+				</li>
 			</ul>
-		</section>
+		</fieldset>
+		<fieldset>
+			<legend>Size</legend>
+			<ul>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Small</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Medium</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Large</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Extra Large</span>
+					</label>
+				</li>
+			</ul>
+		</fieldset>
+		<fieldset>
+			<legend>Gender</legend>
+			<ul>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Male</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Female</span>
+					</label>
+				</li>
+			</ul>
+		</fieldset>
+		<fieldset>
+			<legend>Size</legend>
+			<ul>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Puppy</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Young</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Large</span>
+					</label>
+				</li>
+				<li>
+					<label>
+						<input type="checkbox" />
+						<span>Extra Large</span>
+					</label>
+				</li>
+			</ul>
+		</fieldset>
 		<p><button>Go</button></p>
 	</form>
 
