--- a/sitemap.html
+++ b/sitemap.html
@@ -88,28 +88,17 @@
 
 				<section>
 					<section>
-						<h3>Donate</h3>
+						<h3>Home</h3>
 						<ul>
+							<li><a href="/home.html">Home</a></li>
 							<li><a href="/donate/">Donate</a></li>
-						</ul>
-					</section>
-					<section>
-						<h3>Volunteer</h3>
-						<ul>
-							<li><a href="/volunteer/">Volunteer</a></li>
-						</ul>
-					</section>
-					<section>
-						<h3>Adopt</h3>
-						<ul>
-							<li><a href="/adopt/">Search</a></li>
-							<li><a href="/adopt/">Search Results</a></li>
-						</ul>
-					</section>
-					<section>
-						<h3>What We Do</h3>
-						<ul>
-							<li><a href="/about/">What We Do</a></li>
+							<li><a href="/donate/details.html">Donate Details</a></li>
+							<li><a href="/volunteer">Volunteer</a></li>
+							<li><a href="/volunteer/details.html">Volunteer details</a></li>
+							<li><a href="/adopt/">Adopt</a></li>
+							<li><a href="/adopt/details.html">Pet Details</a></li>
+							<li><a href="/explore.html">Explore</a></li>
+							<li><a href="/about/index.html">About Us</a></li>
 						</ul>
 					</section>
 				</section>
