--- a/donate/index.html
+++ b/donate/index.html
@@ -1,11 +1,43 @@
----
-layout: landing
-description: Donate to Karma Rescue
-title: Donate
----
 
-<div class="row">
-	<div class="col-lg-12">
-		This is the donate page
+<!doctype html>
+<html lang="en" dir="ltr">
+<head>
+	<meta charset="utf-8" />
+	<title>Donate</title>
+	<link type="text/css" rel="stylesheet" href="/css/shared.css" />
+</head>
+<body>
+	<div id = 'hero-header-div' class = 'hero-header-div'>
+		<image id = 'hero-header-image' class = 'hero-header-image' src = 'http://placehold.it/900x300''></image>	
 	</div>
-</div>
+	
+	<div id = 'donate-static-div' class = 'donate-static-div'> 
+		<!-- static text with papypal/donate button --> 
+		<p>Static text with paypal button - lower right?</p>
+	</div>
+	
+	<div id = 'donate-dynamic-container' class = 'donate-dynamic-container'>
+		<div id = 'donate-dynamic-container-left' class = 'donate-dynamic-container-left'>
+			<image id = 'donate-dyanmic-image-left' class = 'donate-dynamic-image-left' src = 'http://placehold.it/90x30'></image>
+			Left dynamic container div<br>
+		</div>
+		
+		<div id = 'donate-dynamic-container-right' class = 'donate-dynamic-container-right'>
+			<image id = 'donate-dyanmic-image-right' class = 'donate-dynamic-image-right' src = 'http://placehold.it/90x30'></image>
+			Right dynamic container div<br>
+		</div>
+	</div>
+	
+	
+	<div id = 'donate-dynamic-text-1' class = 'donate-dynamic-container'>
+		<div class = 'donate-dynamic-text-left'><br>Left dynamic text 1</div>
+		<div class = 'donate-dynamic-text-right'>Right dynamic text 1<br></div>
+	</div>
+	
+	<div id = 'donate-dynamic-text-2' class = 'donate-dynamic-container'>
+		<div class = 'donate-dynamic-text-left'><br>Left dynamic text 2</div>
+		<div class = 'donate-dynamic-text-right'>Right dynamic text 2<br></div>
+	</div>
+	
+</body>
+</html>
