Remove Bootstrap from base pages

--- a/adopt/index.html
+++ b/adopt/index.html
@@ -1,116 +1,80 @@
+---
+layout: master_default
+description: Karma Rescue home page
+---
 
-<!doctype html>
-<html lang="en" dir="ltr">
-<head>
-	<meta charset="utf-8" />
-	<title>Adopt a Pet</title>
-	<link type="text/css" rel="stylesheet" href="/css/shared.css" />
-</head>
-<body>
-	<h1>Adopt a Pet</h1>
+<div class="row">
+	<div class="col-lg-12">
+		<h1>Adopt a Pet</h1>
 	<h2>What kind of dog are you looking for?</h2>
 
-	<form action="results" method="get">
-		<fieldset>
-			<legend>Good With</legend>
-			<ul>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Kids</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Cats</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Dogs</span>
-					</label>
-				</li>
-			</ul>
-		</fieldset>
-		<fieldset>
-			<legend>Size</legend>
-			<ul>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Small</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Medium</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Large</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Extra Large</span>
-					</label>
-				</li>
-			</ul>
-		</fieldset>
-		<fieldset>
-			<legend>Gender</legend>
-			<ul>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Male</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Female</span>
-					</label>
-				</li>
-			</ul>
-		</fieldset>
-		<fieldset>
-			<legend>Size</legend>
-			<ul>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Puppy</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Young</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Large</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Extra Large</span>
-					</label>
-				</li>
-			</ul>
-		</fieldset>
-		<p><button>Go</button></p>
-	</form>
-
-</body>
-</html>
+	<ul class="list">
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+	</ul>
+	</div>
+</div>
