Add more example files

--- a/adopt/details.html
+++ b/adopt/details.html
@@ -4,9 +4,21 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Sparky the Dog</title>
-	<link type="text/css" rel="stylesheet" href="/css/shared.css" />
+	<link type="text/css" rel="stylesheet" href="/css/basic.css" />
 </head>
 <body>
+
+	<header>
+		<h2><a href="/home.html">Karma Rescue</a></h2>
+		<nav>
+			<ul>
+				<li><a href="/adopt/">Adopt</a></li>
+				<li><a href="/volunteer/">Volunteer</a></li>
+				<li><a href="/donate/">Donate</a></li>
+				<li><a href="/explore.html">Explore</a></li>
+			</ul>
+		</nav>
+	</header>
 
 	<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
 
