--- a/adopt/index.html
+++ b/adopt/index.html
@@ -1,12 +1,24 @@
-
 <!doctype html>
 <html lang="en" dir="ltr">
 <head>
 	<meta charset="utf-8" />
 	<title>Adopt a Pet</title>
-	<link type="text/css" rel="stylesheet" href="/css/shared.css" />
+	<link type="text/css" rel="stylesheet" href="/css/basic.css" />
 </head>
 <body>
+
+	<header>
+		<h2><a href="/home.html">Karma Rescue</a></h2>
+		<nav>
+			<ul>
+				<li><a href="/adopt/">Adopt</a></li>
+				<li><a href="/volunteer/">Volunteer</a></li>
+				<li><a href="/donate/">Donate</a></li>
+				<li><a href="/explore.html">Explore</a></li>
+			</ul>
+		</nav>
+	</header>
+
 	<h1>Adopt a Pet</h1>
 	<h2>What kind of dog are you looking for?</h2>
 
@@ -111,6 +123,75 @@
 		</fieldset>
 		<p><button>Go</button></p>
 	</form>
+
+	<ul class="list">
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+		<li>
+			<a href="">
+				<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+			</a>
+			<form action="" method="post"><button>Save</button></form>
+		</li>
+	</ul>
 
 </body>
 </html>
