--- a/volunteer/details.html
+++ b/volunteer/details.html
@@ -4,9 +4,22 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Volunteer Details</title>
-	<link type="text/css" rel="stylesheet" href="/css/shared.css" />
+	<link type="text/css" rel="stylesheet" href="/css/basic.css" />
 </head>
 <body>
+
+	<header>
+		<h2><a href="/home.html">Karma Rescue</a></h2>
+		<nav>
+			<ul>
+				<li><a href="/adopt/">Adopt</a></li>
+				<li><a href="/volunteer/">Volunteer</a></li>
+				<li><a href="/donate/">Donate</a></li>
+				<li><a href="/explore.html">Explore</a></li>
+			</ul>
+		</nav>
+	</header>
+
 	<h1>Volunteer Details</h1>
 </body>
 </html>
