--- a/donate/index.html
+++ b/donate/index.html
@@ -4,40 +4,35 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Donate</title>
-	<link type="text/css" rel="stylesheet" href="/css/shared.css" />
+	<link type="text/css" rel="stylesheet" href="/css/basic.css" />
 </head>
 <body>
-	<div id = 'hero-header-div' class = 'hero-header-div'>
-		<image id = 'hero-header-image' class = 'hero-header-image' src = 'http://placehold.it/900x300''></image>	
-	</div>
+
+	<header>
+		<h2><a href="/home.html">Karma Rescue</a></h2>
+		<nav>
+			<ul>
+				<li><a href="/adopt/">Adopt</a></li>
+				<li><a href="/volunteer/">Volunteer</a></li>
+				<li><a href="/donate/">Donate</a></li>
+				<li><a href="/explore.html">Explore</a></li>
+			</ul>
+		</nav>
+	</header>
+
+	<image src="http://placehold.it/900x300" alt="" />	
+
+	<p>Introductory text about donating
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+	<form><button>Donate</button></form>
+
 	
-	<div id = 'donate-static-div' class = 'donate-static-div'> 
-		<!-- static text with papypal/donate button --> 
-		<p>Static text with paypal button - lower right?</p>
-	</div>
-	
-	<div id = 'donate-dynamic-container' class = 'donate-dynamic-container'>
-		<div id = 'donate-dynamic-container-left' class = 'donate-dynamic-container-left'>
-			<image id = 'donate-dyanmic-image-left' class = 'donate-dynamic-image-left' src = 'http://placehold.it/90x30'></image>
-			Left dynamic container div<br>
-		</div>
-		
-		<div id = 'donate-dynamic-container-right' class = 'donate-dynamic-container-right'>
-			<image id = 'donate-dyanmic-image-right' class = 'donate-dynamic-image-right' src = 'http://placehold.it/90x30'></image>
-			Right dynamic container div<br>
-		</div>
-	</div>
-	
-	
-	<div id = 'donate-dynamic-text-1' class = 'donate-dynamic-container'>
-		<div class = 'donate-dynamic-text-left'><br>Left dynamic text 1</div>
-		<div class = 'donate-dynamic-text-right'>Right dynamic text 1<br></div>
-	</div>
-	
-	<div id = 'donate-dynamic-text-2' class = 'donate-dynamic-container'>
-		<div class = 'donate-dynamic-text-left'><br>Left dynamic text 2</div>
-		<div class = 'donate-dynamic-text-right'>Right dynamic text 2<br></div>
-	</div>
-	
+
 </body>
 </html>
