--- a/explore.html
+++ b/explore.html
@@ -1,12 +1,70 @@
-
 <!doctype html>
 <html lang="en" dir="ltr">
 <head>
 	<meta charset="utf-8" />
 	<title>Explore</title>
-	<link type="text/css" rel="stylesheet" href="/css/shared.css" />
+	<link type="text/css" rel="stylesheet" href="/css/basic.css" />
 </head>
 <body>
-	<h1>Explore</h1>
+
+	<header>
+		<h2><a href="/home.html">Karma Rescue</a></h2>
+		<nav>
+			<ul>
+				<li><a href="/adopt/">Adopt</a></li>
+				<li><a href="/volunteer/">Volunteer</a></li>
+				<li><a href="/donate/">Donate</a></li>
+				<li><a href="/explore.html">Explore</a></li>
+			</ul>
+		</nav>
+	</header>
+
+	<ul class="explore">
+		<li>
+			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+			Learn about<br /><strong>Karma Rescue</strong>
+		</li>
+		<li>
+			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+			Support<br /><strong>The Cody Fund</strong>
+		</li>
+		<li>
+			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+			Help<br /><strong>Foster Program</strong>
+		</li>
+		<li>
+			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+			Support<br /><strong>10,000 Paws Project</strong>
+		</li>
+		<li>
+			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+			Help<br /><strong>The Guardian Angel Program</strong>
+		</li>
+		<li>
+			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+			Learn about<br /><strong>Volunteering Opportunities</strong>
+		</li>
+		<li>
+			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+			Support <br /><strong>Maxine Goldenson Foundation's Liping Animal Medical Fund</strong>
+		</li>
+		<li>
+			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+			Support <br /><strong>Sid’s Spay/Neuter Program</strong>
+		</li>
+		<li>
+			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+			Learn about<br /><strong>How to Donate</strong>
+		</li>
+		<li>
+			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+			Support<br /><strong>special donations in honor or memory of...</strong>
+		</li>
+		<li>
+			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+			Help<br /><strong>volunteer for adoption events</strong>
+		</li>
+	</ul>
+
 </body>
 </html>
