--- a/volunteer/index.html
+++ b/volunteer/index.html
@@ -1,71 +1,31 @@
----
-layout: landing
-description: Volunteer for Karma Rescue
-title: Volunteer
----
-
 <!doctype html>
 <html lang="en" dir="ltr">
 <head>
 	<meta charset="utf-8" />
 	<title>Volunteer</title>
-	<link type="text/css" rel="stylesheet" href="/css/shared.css" />
+	<link type="text/css" rel="stylesheet" href="/css/basic.css" />
 </head>
 <body>
-	<div id = 'hero-header-div' class = 'hero-header-div'>
-		<image id = 'hero-header-image' class = 'hero-header-image' src = 'http://placehold.it/900x300''></image>	
-	</div>
-	
-	<div id = 'volunteer-static-div' class = 'volunteer-static-div'> 
-		<p>
-		<image id = 'volunteer-static-image-1' class = 'volunteer-static-image' src = 'http://placehold.it/30x30'></image>
-		icon with static text 1
-		</p>
-		
-		<p>
-		<image id = 'volunteer-static-image-2' class = 'volunteer-static-image' src = 'http://placehold.it/30x30'></image>
-		icon with static text 2
-		</p>
-		
-		<p>
-		<image id = 'volunteer-static-image-3' class = 'volunteer-static-image' src = 'http://placehold.it/30x30'></image>
-		icon with static text 3
-		</p>
-		
-		<p>
-		<image id = 'volunteer-static-image-4' class = 'volunteer-static-image' src = 'http://placehold.it/30x30'></image>
-		icon with static text 4
-		</p>
-		
-	</div>
-	
-	<div id = 'volunteer-dynamic-container' class = 'volunteer-dynamic-container'>
-		<div id = 'volunteer-dynamic-container-left' class = 'volunteer-dynamic-container-left'>
-			<image id = 'volunteer-dyanmic-image-left' class = 'volunteer-dynamic-image-left' src = 'http://placehold.it/90x30'></image>
-			Left dynamic container div<br>
-		</div>
-		
-		<div id = 'volunteer-dynamic-container-right' class = 'volunteer-dynamic-container-right'>
-			<image id = 'volunteer-dyanmic-image-right' class = 'volunteer-dynamic-image-right' src = 'http://placehold.it/90x30'></image>
-			Right dynamic container div<br>
-		</div>
-	</div>
-	
-	
-	<div id = 'volunteer-dynamic-text-1' class = 'volunteer-dynamic-container'>
-		<div class = 'volunteer-dynamic-text-left'><br>Left dynamic text 1</div>
-		<div class = 'volunteer-dynamic-text-right'>Right dynamic text 1<br></div>
-	</div>
-	
-	<div id = 'volunteer-dynamic-text-2' class = 'volunteer-dynamic-container'>
-		<div class = 'volunteer-dynamic-text-left'><br>Left dynamic text 2</div>
-		<div class = 'volunteer-dynamic-text-right'>Right dynamic text 2<br></div>
-	</div>
-	
-	<div id = 'volunteer-dynamic-text-3' class = 'volunteer-dynamic-container'>
-		<div class = 'volunteer-dynamic-text-left'><br>Left dynamic text 3</div>
-		<div class = 'volunteer-dynamic-text-right'>Right dynamic text 3<br></div>
-	</div>
-	
+
+	<header>
+		<h2><a href="/home.html">Karma Rescue</a></h2>
+		<nav>
+			<ul>
+				<li><a href="/adopt/">Adopt</a></li>
+				<li><a href="/volunteer/">Volunteer</a></li>
+				<li><a href="/donate/">Donate</a></li>
+				<li><a href="/explore.html">Explore</a></li>
+			</ul>
+		</nav>
+	</header>
+
+	<h1>Volunteer</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
 </body>
 </html>
