Add more example pages

--- a/explore.html
+++ b/explore.html
@@ -21,48 +21,70 @@
 
 	<ul class="explore">
 		<li>
-			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-			Learn about<br /><strong>Karma Rescue</strong>
+			<a href="">
+				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+				Learn about<br /><strong>Karma Rescue</strong>
+			</a>
 		</li>
 		<li>
-			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-			Support<br /><strong>The Cody Fund</strong>
+			<a href="">
+				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+				Support<br /><strong>The Cody Fund</strong>
+			</a>
 		</li>
 		<li>
-			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-			Help<br /><strong>Foster Program</strong>
+			<a href="">
+				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+				Help<br /><strong>Foster Program</strong>
+			</a>
 		</li>
 		<li>
-			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-			Support<br /><strong>10,000 Paws Project</strong>
+			<a href="">
+				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+				Support<br /><strong>10,000 Paws Project</strong>
+			</a>
 		</li>
 		<li>
-			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-			Help<br /><strong>The Guardian Angel Program</strong>
+			<a href="">
+				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+				Help<br /><strong>The Guardian Angel Program</strong>
+			</a>
 		</li>
 		<li>
-			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-			Learn about<br /><strong>Volunteering Opportunities</strong>
+			<a href="">
+				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+				Learn about<br /><strong>Volunteering Opportunities</strong>
+			</a>
 		</li>
 		<li>
-			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-			Support <br /><strong>Maxine Goldenson Foundation's Liping Animal Medical Fund</strong>
+			<a href="">
+				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+				Support <br /><strong>Maxine Goldenson Foundation's Liping Animal Medical Fund</strong>
+			</a>
 		</li>
 		<li>
-			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-			Support <br /><strong>Sid’s Spay/Neuter Program</strong>
+			<a href="">
+				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+				Support <br /><strong>Sid’s Spay/Neuter Program</strong>
+			</a>
 		</li>
 		<li>
-			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-			Learn about<br /><strong>How to Donate</strong>
+			<a href="">
+				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+				Learn about<br /><strong>How to Donate</strong>
+			</a>
 		</li>
 		<li>
-			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-			Support<br /><strong>special donations in honor or memory of...</strong>
+			<a href="">
+				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+				Support<br /><strong>special donations in honor or memory of...</strong>
+			</a>
 		</li>
 		<li>
-			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-			Help<br /><strong>volunteer for adoption events</strong>
+			<a href="">
+				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+				Help<br /><strong>volunteer for adoption events</strong>
+			</a>
 		</li>
 	</ul>
 
