--- a/sitemap.html
+++ b/sitemap.html
@@ -88,17 +88,32 @@
 
 				<section>
 					<section>
-						<h3>Home</h3>
+						<h3>Main Pages</h3>
 						<ul>
 							<li><a href="/home.html">Home</a></li>
-							<li><a href="/donate/">Donate</a></li>
-							<li><a href="/donate/details.html">Donate Details</a></li>
-							<li><a href="/volunteer">Volunteer</a></li>
-							<li><a href="/volunteer/details.html">Volunteer details</a></li>
-							<li><a href="/adopt/">Adopt</a></li>
-							<li><a href="/adopt/details.html">Pet Details</a></li>
 							<li><a href="/explore.html">Explore</a></li>
 							<li><a href="/about/index.html">About Us</a></li>
+						</ul>
+					</section>
+					<section>
+						<h3>Donate</h3>
+						<ul>
+							<li><a href="/donate/">Features</a></li>
+							<li><a href="/donate/details.html">Donate Details</a></li>
+						</ul>
+					</section>
+					<section>
+						<h3>Volunteer</h3>
+						<ul>
+							<li><a href="/volunteer">Features</a></li>
+							<li><a href="/volunteer/details.html">Volunteer details</a></li>
+						</ul>
+					</section>
+					<section>
+						<h3>Adopt</h3>
+						<ul>
+							<li><a href="/adopt/">Search</a></li>
+							<li><a href="/adopt/details.html">Pet Details</a></li>
 						</ul>
 					</section>
 				</section>
