--- a/about/index.html
+++ b/about/index.html
@@ -26,15 +26,40 @@
 	<p class="by">Rande Levine</p>
 	<p class="title">Founder of Karma Rescue</p>
 
-	<h2>Tails of success</h2>
-
 	<p>Sometimes when I look around the world, I can't help but see how things could be better. The same is true when I look into the eyes of a dog, or any animal. I started loving animals the day I was born. My mom always let me have pets growing up: birds, hamsters, rats, cats, dogs, and even a chicken. To me of course, these were not my pets but were my babies. If I could have put a diaper on my chicken, I would have. Growing up with animals helped me find a special place in my heart for their needs. One animal in particular was my dog Rufus. I adopted him when I was in college. Everyone thought I was crazy to get a dog at such an inopportune time of my life.</p>
 
-	<h2>Press</h2>
-
-	
-
 	<p>Rufus and I did everything together. We never left each other's sides. We walked, talked, sang, played, laughed, cried…you name it. Raising him on my own was one of the greatest experiences of my life. It humbled me and taught me to give unconditionally. Every morning when I looked into his sweet eyes, I thought of how many more wonderful animals like Rufus were out there. Having been involved in rescue for some time, I have seen it everyday. I walk into the shelters and see those same eyes that Rufus had. I see the longing and the love these animals have for us. I see how they can add so much to our lives. As we all know, not all animals have the chance to teach the world this message. So I founded Karma Rescue to try to give as many of them as possible the chance to help better our lives by just being in them. They deserve it.</p>
+
+	<h2>Tails of success</h2>
+	<ul>
+		<li>
+			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+			Roxy Before
+		</li>
+		<li>
+			<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+			After
+		</li>
+	</ul>
+
+	<h2>Press</h2>
+	<ul class="headlines">
+		<li>
+			<img src="http://placehold.it/300x300" width="300" height="300" alt="" />
+			<h3>Article Headline Here.</h3>
+			<p>Newspaper Name, Dec 7, 2013</p>
+		</li>
+		<li>
+			<img src="http://placehold.it/300x300" width="300" height="300" alt="" />
+			<h3>Article Headline Here.</h3>
+			<p>Newspaper Name, Dec 7, 2013</p>
+		</li>
+		<li>
+			<img src="http://placehold.it/300x300" width="300" height="300" alt="" />
+			<h3>Article Headline Here.</h3>
+			<p>Newspaper Name, Dec 7, 2013</p>
+		</li>
+	</ul>
 
 </body>
 </html>
