--- a/donate/details.html
+++ b/donate/details.html
@@ -19,7 +19,7 @@
 		</nav>
 	</header>
 
-	<h1>Program Name</h1>
+	<h1>10,000 Paws</h1>
 
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -61,14 +61,12 @@
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation.</p>
 
-	<h3>Even more information</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat.</p>
-
-	<h3>Video</h3>
-	<img src="http://placehold.it" width="300" height="300" alt="" />
+	<h3>Related Information</h3>
+	<ul>
+		<li><a href="">Lorem</a></li>
+		<li><a href="">Ipsum</a></li>
+		<li><a href="">Dolar</a></li>
+	</ul>
 
 </body>
 </html>
