--- a/donate/index.html
+++ b/donate/index.html
@@ -20,19 +20,59 @@
 		</nav>
 	</header>
 
-	<image src="http://placehold.it/900x300" alt="" />	
+	<h1>Donate</h1>
 
-	<p>Introductory text about donating
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<section>
+		<image src="http://placehold.it/900x300" alt="" />	
 
-	<form><button>Donate</button></form>
+		<h2><a href="">Featured Program</a></h2>
 
-	
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+
+		<form><button>Donate</button></form>
+	</section>
+
+	<section>
+		<img src="http://placehold.it/300x200" alt="" />	
+
+		<h2><a href="">Featured Program</a></h2>
+
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+
+		<form><button>Donate</button></form>
+	</section>
+
+	<section>
+		<img src="http://placehold.it/300x200" alt="" />	
+
+		<h2><a href="">Featured Program</a></h2>
+
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+
+		<form><button>Donate</button></form>
+	</section>
+
+	<section>
+		<h2><a href=""><img src="http://placehold.it/100x75" alt="" /> Featured Program</a></h2>
+	</section>
+
+	<section>
+		<h2><a href=""><img src="http://placehold.it/100x75" alt="" /> Featured Program</a></h2>
+	</section>
+
+	<section>
+		<h2><a href=""><img src="http://placehold.it/100x75" alt="" /> Featured Program</a></h2>
+	</section>
+
+	<section>
+		<h2><a href=""><img src="http://placehold.it/100x75" alt="" /> Featured Program</a></h2>
+	</section>
 
 </body>
 </html>
