Change links so they work with GitHub pages

--- a/volunteer/index.html
+++ b/volunteer/index.html
@@ -4,18 +4,18 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Volunteer</title>
-	<link type="text/css" rel="stylesheet" href="/css/basic.css" />
+	<link type="text/css" rel="stylesheet" href="/karma-redesign/css/basic.css" />
 </head>
 <body>
 
 	<header>
-		<h2><a href="/home.html">Karma Rescue</a></h2>
+		<h2><a href="/karma-redesign/home.html">Karma Rescue</a></h2>
 		<nav>
 			<ul>
-				<li><a href="/adopt/">Adopt</a></li>
-				<li><a href="/volunteer/">Volunteer</a></li>
-				<li><a href="/donate/">Donate</a></li>
-				<li><a href="/explore.html">Explore</a></li>
+				<li><a href="/karma-redesign/adopt/">Adopt</a></li>
+				<li><a href="/karma-redesign/volunteer/">Volunteer</a></li>
+				<li><a href="/karma-redesign/donate/">Donate</a></li>
+				<li><a href="/karma-redesign/explore.html">Explore</a></li>
 			</ul>
 		</nav>
 	</header>
