Adjust links to karma-redesign branch

--- a/adopt/results.html
+++ b/adopt/results.html
@@ -3,7 +3,7 @@ layout: master_default
 description: Karma Rescue Adopt - Search Results page
 ---
 
-<link rel="stylesheet" href="/css/adopt.css"/>
+<link rel="stylesheet" href="/karma-redesign/css/adopt.css"/>
 <h1>Search Results</h1>
 
 <h3>Filters</h3>
