--- a/adopt/index.html
+++ b/adopt/index.html
@@ -2,7 +2,7 @@
 layout: master_default
 description: Karma Rescue home page
 ---
-<link rel="stylesheet" href="/css/adopt.css"/>
+<link rel="stylesheet" href="karma-redesign/css/adopt.css"/>
 	<h1>Adopt a Pet</h1>
 	<h2>What kind of dog are you looking for?</h2>
 
